# python-copier-template

./: .gitignore  .pre-commit-config.yaml  README.md  copier.yml  entrypoint.sh  env_example  main.py.jinja  pyproject.toml  pyproject.toml.jinja  t.py
.devcontainer/: post_create.sh  post_start.sh
.github/workflows/: build_n_test.yaml
dev/: README.md  pyproject.toml
dev/tests/: conftest.py  fastapi_async.yml  test_gen_projects.py
migrations/versions/: b7dc215c6433_create_tables.py
src/dev/: __init__.py
template/: .dockerignore.jinja  .env.jinja  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.jinja  README.md  README.md.jinja  alembic.ini  database.py.jinja  entrypoint.sh.jinja  env.jinja  logger_config.json  logger_config.yaml  main.py.jinja  pyproject.toml.jinja  pyrightconfig.json  requirements.txt
template/.devcontainer/: devcontainer.json  post_create.sh  post_start.sh
template/.github/workflows/: python_build.yaml
template/migrations/: env.py.jinja
template/migrations/versions/: b7dc215c6433_create_tables.py
template/tests/: conftest.py.jinja  test_models.py.jinja  test_{{pkg_name}}.py
template/{{pkg_name}}/: models.py
tests/: conftest.py  conftest.py.jinja  test_gen_projects.py  test_models.py.jinja  test_tools.py  test_{{pkg_name}}.py  tools.py
tests/answers/: fastapi_async.yml
tests/data/: quart_pg.yml  simple.yml  test_one_project.yml
tests/data/dummy/: pyproject.toml
{{pkg_name}}/: app.py.jinja
