# this is a sample file. the versions of depdency is not important here.
[project]
name = "my_test_proj"
version = "0.1.0"
description = "Copier template for generic Python 3 project with tooling configuration for testing, linting and IDE support"
authors = [{ name = "Mr Beans", email = "mrbeans@beans.com" }]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "python-dotenv >= 1.0.1",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "alembic >= 1.13.0",
    "sqlalchemy[postgresql_asyncpg,mypy]>=2.0.31",
    "psycopg[binary]>=3.1.19",
    "aiosqlite>=0.20.0",
]

[tool.uv]
managed = true
dev-dependencies = [
    "pytest >= 7.4.0",
    "pytest-dotenv >= 0.5.2",
    "pytest-mock >= 3.14",
    "pytest-cov >= 4.1",
    "pytest-asyncio>=0.23.7",
    "sqlalchemy-utils >= 0.41.1",
    "pre-commit >= 3.7.1",
    "ruff >= 0.6.3",
    "pyright>=1.1.390",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
env_files = [".env"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["."]
omit = ["tests/*"]

# see ruff configuration options at
# https://docs.astral.sh/ruff/configuration/

[tool.ruff]
line-length = 120
indent-width = 4
exclude = [".git", "__pycache__", "venv", ".venv"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C",
    "I",
    "A",
] # Enable checks for PEP8, imports, and other standard rules
ignore = ["E203", "E266"]
